--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -57,6 +57,7 @@ code {
     background-color: $custom;
 }
 
+
 .buttons {
     background-color: $body-bg;
     border-bottom: .5px solid lightgray;
@@ -130,12 +131,12 @@ a.list-group-item:hover {
     min-height: 90px;
 }
 
-.blue {
-    background-color: blue;
-}
+.red-header {
+    background-color: #ff3a3a;
 
-.red {
-    background-color: red;
+}
+.blue-header {
+    background-color: #3a3aff;
 }
 
 @import "./dual-slider";
